kubernetes/agent-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose --file ../docker-compose.yml convert
    kompose.version: 1.38.0 (HEAD)
  labels:
    io.kompose.service: agent
  name: agent
spec:
  ports:
    - name: "8000"
      port: 8000
      targetPort: 8000
  selector:
    io.kompose.service: agent
